--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
 <!DOCTYPE html>
 <html>
+    <body>
+        <div id="calculator">
+            <div class="button"></div>
+            <input id="lastvalue" type="type" />
+            <input id="lastvalue" type="type" />
+            <input id="lastvalue" type="type" />
+        </div>
+    </body>
 </html>
