added an input and removed some divs

--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
     <body>
         <div id="calculator">
             <div class="button"></div>
-            <input id="lastvalue" type="type" />
-            <input id="lastvalue" type="type" />
-            <input id="lastvalue" type="type" />
+            <input id="input" type="type" />
         </div>
     </body>
 </html>
