added new inputs

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <div id="calculator">
             <div class="button"></div>
             <input id="input" type="type" />
+            <input id="input" type="type" />
+            <input id="input" type="type" />
         </div>
     </body>
 </html>
