--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
             <input id="input" type="type" />
             <input id="input" type="type" />
             <input id="input" type="type" />
+            <input id="input" type="type" />
+            <input id="input" type="type" />
         </div>
     </body>
 </html>
